Fix the exchange rate block styling, where the separator was taking too much space

--- a/frontend/src/sass/currency.scss
+++ b/frontend/src/sass/currency.scss
@@ -45,7 +45,8 @@
   }
 
   &__leader {
-    width: 100%;
+    flex-shrink: 1;
+    flex-grow: 1;
     border-bottom: 1px dashed black;
     transform: translateY(-5px);
   }
@@ -54,6 +55,10 @@
     display: flex;
     flex-direction: row;
     gap: 16px;
+  }
+
+  &__icon {
+    width: 20px;
   }
 }
 
